update Makefile rules
tex/ and figures/ directories were missing from the target dependencies. now fixed.


git-svn-id: svn+ssh://svn.cern.ch/reps/LHCDMF/trunk@40 4525493e-7705-40b1-a816-d608a930855b

--- a/doc/Makefile
+++ b/doc/Makefile
@@ -1,5 +1,5 @@
 
-pdf: *.tex contributors.tex
+pdf: *.tex contributors.tex tex/*.tex figures/*.pdf figures/svg/*.svg
 	pdflatex doc.tex
 	bibtex doc
 	pdflatex doc.tex
