Added some plots from A. Nelson (acceptances available but still not in), paragraph by Yang Bai
git-svn-id: svn+ssh://svn.cern.ch/reps/LHCDMF/trunk@74 4525493e-7705-40b1-a816-d608a930855b

--- a/doc/Makefile
+++ b/doc/Makefile
@@ -13,6 +13,6 @@ contributors.tex: members-lhc-dmf-contributors.csv contributors.pl
 	perl contributors.pl >> contributors.tex
 
 clean:
-	rm -f doc.aux doc.blg doc.log doc.out
+	rm -f doc.aux doc.blg doc.log doc.out doc.bbl
 	rm -f *~ tex/*~
 	rm -f doc.pdf 
