Timothee's comments, makefile fix
git-svn-id: svn+ssh://svn.cern.ch/reps/LHCDMF/trunk@80 4525493e-7705-40b1-a816-d608a930855b

--- a/summary/Makefile
+++ b/summary/Makefile
@@ -1,5 +1,5 @@
 
-pdf: *.tex contributors.tex tex/*.tex 
+pdf: *.tex contributors.tex  
 	pdflatex summary.tex
 	bibtex summary
 	pdflatex summary.tex
