fix typo in Makefile
git-svn-id: svn+ssh://svn.cern.ch/reps/LHCDMF/trunk@126 4525493e-7705-40b1-a816-d608a930855b

--- a/doc/Makefile
+++ b/doc/Makefile
@@ -11,7 +11,7 @@ pass1: $(tex_source) figures/*.pdf figures/svg/*.svg
 	pdflatex doc.tex
 	bibtex doc
 
-mp: pdf cleanMP 
+mp: doc.pdf cleanMP 
 	pdflatex doc.tex
 	pdflatex doc.tex
 
