--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,7 @@
 /doc/doc.pdf
+/PhysicsDarkUniverse/doc.aux
+/PhysicsDarkUniverse/doc.bbl
+/PhysicsDarkUniverse/doc.blg
+/PhysicsDarkUniverse/doc.log
+/PhysicsDarkUniverse/doc.out
+/PhysicsDarkUniverse/doc.pdf
